...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchingActivity">

    <Button
        android:id="@+id/MockButton"
        android:layout_width="127dp"
        android:layout_height="54dp"
        android:onClick="goToMockOnClick"
        android:text="Mock with students"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchonClick"
        android:text="search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="364dp"
        android:layout_height="536dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:clipToPadding="false"
        android:padding="4dp"
...
